--- a/Java面试/尚筹网项目复习.md
+++ b/Java面试/尚筹网项目复习.md
@@ -132,4 +132,27 @@
 
 ### 2、会员注册登录
 
-* 因为在分布式环境下，所以session不共享，登录后的用户不能携带登录数据跳转到其他服务，使用Session同步技术解决这一问题，使用Redis存储session的信息，导入SpringSession的依赖，配置Redis和SpringSession，注意，**存入Session的数据需要支持序列化，相当于SpringSession做了之前Tomcat对Session管理的功能。**
+* 注册
+  * 使用第三方接口发送验证码短信，把验证码存入Redis，注册时以便校验
+
+* 登录
+  * 因为在分布式环境下，所以session不共享，登录后的用户不能携带登录数据跳转到其他服务，使用Session同步技术解决这一问题，使用Redis存储session的信息，导入SpringSession的依赖，配置Redis和SpringSession，注意，**存入Session的数据需要支持序列化，相当于SpringSession做了之前Tomcat对Session管理的功能。**
+
+
+
+### 3、发起项目
+
+* 总共有三个表的信息需要保存
+* 每提交一个表单就先保存到session（redis）中，最后一次提交在进行数据库的保存
+* 其中图片信息存储到阿里云OSS中
+* 针对和页面交互使用VO对象，和数据库交互使用PO对象
+* 注意序列化问题
+
+
+
+### 4、展示项目
+
+* 展示项目分类
+* 展示项目
+* 展示项目详情
+* 展示项目回报信息
