--- a/Java面试/面经汇总.md
+++ b/Java面试/面经汇总.md
@@ -6,4 +6,30 @@
 2. String类常用的方法有哪些？
 3. 创建线程的方式有几种？
 4. 三种创建线程的方法有什么区别？
-5. 
+5. 如果让你选择，你要会使用哪一个，为什么？
+6. 谈谈你对多态的理解
+7. 抽象类可以用final修饰吗
+8. 抽象类和接口的区别
+9. 抽象类可以有构造函数吗？可以创建对象吗
+10. 有了解过NIO和BIO吗
+11. NIO为什么时非阻塞的
+12. HashMap的底层结构
+13. 为什么引入红黑树
+14. 数组和链表的数据结构各有什么优缺点
+15. == 和 eques 的区别
+16. 自定义eques方法需要注意什么，hashcode的作用
+17. 用过哪些锁
+18. sync修饰静态方法和普通方法有什么对象
+19. volatile关键字的理解
+20. 怎么实现可见性的
+21. 你知道自旋锁吗
+22. sleep和wait方法有什么区别
+23. 谈谈IOC和AOP
+24. AOP运用的场景
+25. AOP的核心思想
+26. Java动态代理怎么实现的
+27. bean的注入方式
+28. MySQL的索引是什么
+29. MySQL的InnoDB引擎的索引怎么实现的
+30. 平时有用过索引吗，创建索引需要注意什么？
+31. 怎么根据一组条件查询数据
